# homework19.2

./: README.md  pyproject.toml
config/: settings.py  urls.py
main_app/: urls.py
main_app/templates/: home.html
