[tool.poetry]
name = "homework19-2"
version = "0.1.0"
description = ""
authors = ["PaulBitHub <p.bitiakov.official@gmail.com>"]
readme = "README.md"
packages = [{include = "homework19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
